--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stepwise",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.0.0-0",
     "@babel/preset-react": "7.7.4",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
@@ -12,7 +13,8 @@
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react_ujs": "2.6.1",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "webpack": "^4.0.0"
   },
   "version": "0.1.0",
   "devDependencies": {
