--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "axios": "0.19.0",
+    "dayjs": "1.8.18",
     "evergreen-ui": "4.21.5",
     "lodash": "4.17.15",
     "prop-types": "15.7.2",
